Use Java 17