@@ -1,4 +1,4 @@
-FROM clojure:lein-2.8.1
+FROM clojure:openjdk-17-lein-2.9.8
 WORKDIR /aleph
 COPY src src
 COPY project.clj project.clj
@@ -6,4 +6,4 @@ RUN lein uberjar
 
 EXPOSE 8080
 
-CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-jar", "target/hello-aleph-standalone.jar"]
+CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-jar", "target/hello-aleph-standalone.jar"]
